@@ -8,6 +8,8 @@
 - Selected month is kept in session, to ease editing in another month than
   the current one. (requiring at least `icemac.addressbook 2.2`)
 
+- Bugfix: empty field values are no longer displayed in the calendar.
+
 
 1.1.0 (2013-12-31)
 ==================
